--- a/flask/app/templates/edit.html
+++ b/flask/app/templates/edit.html
@@ -1,6 +1,7 @@
 <head>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/newitem.css">
+  <title>Item Edit Page</title>
 </head>
 <body>
     <div class="header">
