--- a/flask/app/templates/login.html
+++ b/flask/app/templates/login.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/loginB.css">
-    <title>Document Title</title>
+    <title>PIN Login</title>
 </head>
 <body>
     <div class="app-container">
