--- a/flask/app/templates/newitem.html
+++ b/flask/app/templates/newitem.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/newitem.css">
+  <title>Add Item Page</title>
 </head>
 
 <body class="th">
