--- a/flask/app/static/css/loginA.css
+++ b/flask/app/static/css/loginA.css
@@ -58,3 +58,44 @@ body {
   font-size: 28px;
   color: #444;
 }
+
+.alert-box {
+  border-radius: 10px;
+  margin: 10px;
+  background-color: rgb(220, 66, 66);
+}
+
+.input-box {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 8px;
+  font-size: 0.95rem;
+  border: 1px solid #ccc;
+  padding: 10px 12px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.center {
+  align-items: center;
+  justify-items: center;
+}
+
+.mainbox {
+  margin: 2%;
+  padding: 2%;
+  justify-items: center;
+  max-height: 100%;
+  background: #ccc;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  max-width: 50%;
+  border-radius: 20px;
+}
+
+.subbox {
+  justify-items: center;
+  max-height: 100%;
+  border-radius: 20px;
+}
