--- a/flask/app/templates/add_user.html
+++ b/flask/app/templates/add_user.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/stockmenu.css">
+    <title>Add User Page</title>
 </head>
 
 <body class="th">
