--- a/flask/app/static/css/home.css
+++ b/flask/app/static/css/home.css
@@ -378,36 +378,45 @@ svg {
     font-size: 10px;
   }
 }
-#camera-overlay {
-  display: none;             
+#qr-container {
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.9); 
+  background: black;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   z-index: 9999;
 }
 
-#camera-video {
+#reader {
   width: 100%;
   height: 100%;
-  object-fit: cover;  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
 }
 
-#close-camera {
+#reader video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#close-btn {
   position: absolute;
   top: 20px;
   right: 20px;
-  padding: 10px 15px;
   background: red;
   color: white;
   border: none;
+  padding: 10px 15px;
+  font-size: 18px;
   border-radius: 8px;
-  font-size: 16px;
   cursor: pointer;
   z-index: 10000;
 }
