--- a/flask/app/static/css/loginA.css
+++ b/flask/app/static/css/loginA.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Pridi', serif;
+  font-family: Arial, sans-serif;
   /* font-family: 'Inter', sans-serif; */
   background: linear-gradient(#F9FAFB, #FFF);
   display: flex;
@@ -30,7 +30,11 @@ body {
 
 .text {
     margin: 5% 0 0 0;
-    font-size: 3vh;
+    background: transparent;
+}
+
+.text p{
+  font-size: 1.5rem;
 }
 
 .login-button {
