--- a/flask/app/static/css/newitem.css
+++ b/flask/app/static/css/newitem.css
@@ -1,6 +1,19 @@
+:root{
+    --bg--color: #f9fafb;
+    --base--color: #FFF;
+    --text--color: #000;
+}
+
+.darkmode{
+    --bg--color: #212121;
+    --base--color: #121212;
+    --text--color: #eee;
+}
+
+
 body {
-  background: #f9fafb;
-  font-family: 'Inter', sans-serif;
+  background: var(--bg--color);
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -30,13 +43,13 @@ body {
 
 .back-btn {
     text-decoration: none;
-    color: #333;
+    color: var(--text--color);
     font-size: 24px;
 }
 
 .mainbox {
   max-height: 100%;
-  background: #fff;
+  background: var(--bg--color);
   padding: 40px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   position: fixed;
@@ -77,7 +90,7 @@ body {
   margin-top: 12px;
   margin-bottom: 4px;
   font-size: 0.9rem;
-  color: #333;
+  color: var(--text--color);
 }
 
 .input-box {
