--- a/flask/app/templates/newitem.html
+++ b/flask/app/templates/newitem.html
@@ -9,6 +9,14 @@
 </head>
 
 <body>
+    <script>
+        const darkmode = localStorage.getItem('darkmode');
+        if(darkmode === 'active') {
+          document.body.classList.add('darkmode');
+        } else {
+          document.body.classList.remove('darkmode');
+        }
+    </script>
     <div class="header">
         <a href="{{ url_for('homepage') }}" class="back-btn">
             <span class="material-icons">arrow_back</span>
