--- a/flask/app/templates/signup.html
+++ b/flask/app/templates/signup.html
@@ -27,11 +27,11 @@
             <p>or<br><br>login with email and password</p>
             <div class>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="Example@exmpmail.com" required>
+                <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Your Password Here" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
             </div>
             <button type="submit">Login</button>
         </form>
