--- a/flask/app/static/css/cart.css
+++ b/flask/app/static/css/cart.css
@@ -102,3 +102,78 @@ body {
 .bot-container:hover{
     background-color: rgb(44, 43, 43);
 }
+
+.cart-item {
+  position: relative;
+  background: #fff;
+  border-radius: 15px;
+  margin-bottom: 12px;
+  overflow: hidden;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+}
+.cart-content {
+  display: flex;
+  align-items: center;
+  transition: transform 0.3s ease;
+  padding: 10px;
+}
+.delete-bg {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 80px;
+  background: rgb(247, 23, 23);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+.cart-item.swiped .delete-bg {
+  opacity: 1;
+}
+.cart-info {
+  flex: 1;
+  margin-left: 10px;
+}
+.status-w { 
+  background-color:red; 
+  color:#000;
+  font-size: 0.9rem;
+  border-radius: 10px;
+  padding: 3px ; 
+  opacity: 0.85;
+}
+.status-e { 
+  background-color:rgb(13, 194, 28); 
+  color:#000;
+  font-size: 0.9rem;
+  border-radius: 10px;
+  padding: 3px ; 
+  opacity: 0.85;
+}
+.quantity-control {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+input[type=number] {
+  width: 55px;
+  text-align: center;
+}
+.confirm-btn {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  right: 20px;
+  z-index: 1000;
+  border-radius: 50px;
+  background: linear-gradient(90deg, #000, #333);
+  color: #fff;
+  padding: 14px;
+  font-size: 1.1rem;
+  border: none;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+}
